--- a/app.json
+++ b/app.json
@@ -1,37 +1,43 @@
 {
-  "web": {
-    "bundler": "metro"
-  },
-  "scheme": "your-app-scheme",
   "expo": {
-    "extra": {
-      "API_URL": "http://172.23.193.104:8000"
-    },
     "name": "SATIS-APP",
     "slug": "SATIS-APP",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+
+    "scheme": "your-app-scheme",
+
     "newArchEnabled": true,
+
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+
     "ios": {
       "supportsTablet": true
     },
+
     "android": {
+      "edgeToEdgeEnabled": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
+      }
     },
+
     "web": {
+      "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
+
+    "extra": {
+      "API_URL": "http://172.23.193.104:8000"
+    },
+
     "plugins": ["expo-secure-store"]
   }
 }
