--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gifted-charts": "^1.4.66",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
